Fixed header Images overflow error

--- a/src/components/header/style.scss
+++ b/src/components/header/style.scss
@@ -30,7 +30,7 @@
   .logo {
     cursor: pointer;
     img {
-      height: 230px;
+      height: 50px;
     }
   }
   .menuItems {
